# MLEngine

./: .gitignore  .gitmodules  Builder.bat  CMakeLists.txt  LICENSE  README.md
MLEngine/: CMakeLists.txt  mlengineconfig.h.in
MLEngine/ext/Glad/debug/include/glad/: glad.h
MLEngine/ext/Glad/debug/src/: glad.c
MLEngine/ext/Glad/release/include/glad/: glad.h
MLEngine/ext/Glad/release/src/: glad.c
MLEngine/ext/Glfw/: CMakeLists.txt
MLEngine/ext/Glfw/src/: CMakeLists.txt
MLEngine/include/: console.h  engine.h  enginetime.h  imagedata.h  mlengine_global.h  mlengineconfig.h  monitordata.h  renderingmanager.h  test.h  timemanager.h  timermanager.h  windowhintsdata.h  windowsharedata.h
MLEngine/include/Engine/Core/: engine.h  engineerror.h  engineerrorhelper.h
MLEngine/include/Engine/Debug/: console.h
MLEngine/include/Engine/Time/: enginetime.h  frametime.h  timerhandle.h  timermanager.h
MLEngine/include/FileSystem/: fileutils.h
MLEngine/include/Hardware/: connectionevent.h
MLEngine/include/Hardware/Monitor/: gammaramp.h  monitordata.h  monitordetails.h  monitorhandle.h  monitormode.h
MLEngine/include/Input/: cursor.h  cursormode.h  gamepadax.h  gamepadbutton.h  hatflag.h  input.h  inputconfig.h  key.h  keydata.h  keymodflag.h  keystate.h  mousebutton.h  mousekeydata.h  standardcursorshape.h
MLEngine/include/Rendering/Core/: allocationcallbacksvk.h  clientapi.h  contextcreationapi.h  contextinitdata.h  contextreleasebehavior.h  contextrobustness.h  generalvalues.h  imagedata.h  internalallocationtypevk.h  procaddress.h  procaddressvk.h  renderingcontexttype.h  renderinginitdata.h  renderingmanager.h  systemallocationscopevk.h  vulkanhandler.h  windowattribute.h  windowhintsdata.h  windowprofileapi.h  windowsharedata.h
MLEngine/include/Rendering/Core/Vulkan/: vulkanhandler.h  vulkanmodel.h
MLEngine/shaders/: compile.bat
MLEngine/shaders/glsl/: shader.vert
MLEngine/src/: console.cpp  engine.cpp  enginetime.cpp  imagedata.cpp  monitordata.cpp  renderingmanager.cpp  test.cpp  timemanager.cpp  timerhandle.cpp  timermanager.cpp  windowhintsdata.cpp  windowsharedata.cpp
MLEngine/src/Engine/Core/: engine.cpp  engineerrorhelper.cpp
MLEngine/src/Engine/Debug/: console.cpp
MLEngine/src/Engine/Time/: enginetime.cpp  frametime.cpp  timerhandle.cpp  timermanager.cpp
MLEngine/src/FileSystem/: fileutils.cpp
MLEngine/src/Hardware/Monitor/: monitordata.cpp  monitorhandle.cpp
MLEngine/src/Input/: cursor.cpp  input.cpp
MLEngine/src/Rendering/Core/: imagedata.cpp  renderinginitdata.cpp  renderingmanager.cpp  vulkanhandler.cpp  windowhintsdata.cpp  windowsharedata.cpp
MLEngine/src/Rendering/Core/Vulkan/: vulkanhandler.cpp  vulkanmodel.cpp
Test/: CMakeLists.txt
Test/src/: main.cpp
UnitTesting/: CMakeLists.txt
UnitTesting/src/: consoletester.cpp  enginetimetester.cpp  main.cpp  timemanagertester.cpp  timerhandletester.cpp
